force-app/main/default/objects/SEG_ExcepcionesGrupo__c/SEG_ExcepcionesGrupo__c.object-meta.xml
<CustomObject>
    <description>Junction object con plantillas (NO excepciones) de SEGMENTOS.</description>
    <label>Plantillas Grupo</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID Excepciones Grupo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plantillas Grupo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>