force-app/main/default/objects/SEG_ExcepcionesGrupo__c/fields/SEG_GrupoTrabajoTexto__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoTrabajoTexto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Trabajo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo Operativo Segmentos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Plantillas Grupo</relationshipLabel>
    <relationshipName>SEG_GrupoTrabajoTexto</relationshipName>
    <type>Lookup</type>
</CustomField>