force-app/main/default/objects/SEG_ExcepcionesGrupo__c/fields/SEG_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>SEG_Plantilla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla</label>
    <referenceTo>SEG_Plantilla__c</referenceTo>
    <relationshipName>SEG_PlantillaGrupo</relationshipName>
    <type>Lookup</type>
</CustomField>