force-app/main/default/objects/SEG_ExcepcionesGrupo__c/fields/SEG_ServiciosCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_ServiciosCSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicios CSO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SEG_ServiciosCSO__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marca, Grupo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SEG_ServiciosCSO__c</referenceTo>
    <relationshipName>Detalle_Grupo</relationshipName>
    <type>Lookup</type>
</CustomField>